--- a/Client/Client/Pages/_Host.cshtml
+++ b/Client/Client/Pages/_Host.cshtml
@@ -14,10 +14,11 @@
     <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
 </head>
 <body>
 <app>
-    <component type="typeof(App)" render-mode="ServerPrerendered"/>
+    <component type="typeof(App)" render-mode="Server"/>
 </app>
 
 <div id="blazor-error-ui">
