--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Client</a>
+﻿<div class="top-row pl-4 navbar navbar-light">
+    <a class="navbar-brand" href="">A1-DNP1Y</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,15 +13,17 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="services">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Services
             </NavLink>
         </li>
+        <AuthorizeView Policy="BusinessOwner">
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="employees">
+                <span class="oi oi-people" aria-hidden="true"></span> Employees
             </NavLink>
         </li>
+        </AuthorizeView>
     </ul>
 </div>
 
