--- a/Client/Client/wwwroot/css/site.css
+++ b/Client/Client/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
-
-html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+* {
+    font-family: 'Inter', sans-serif;
 }
 
 a, .btn-link {
@@ -30,16 +30,17 @@ app {
     flex: 1;
 }
 
-    .main .top-row {
-        background-color: #f7f7f7;
-        border-bottom: 1px solid #d6d5d5;
-        justify-content: flex-end;
-    }
+.main .top-row {
+    /*background-color: #f7f7f7;*/
+    border-bottom: 1px solid #d6d5d5;
+    justify-content: flex-end;
+    box-shadow: 0 2px 0 -1px rgba(230,230,230,1);
+}
 
-        .main .top-row > a, .main .top-row .btn-link {
-            white-space: nowrap;
-            margin-left: 1.5rem;
-        }
+.main .top-row > a, .main .top-row .btn-link {
+    white-space: nowrap;
+    margin-left: 1.5rem;
+}
 
 .main .top-row a:first-child {
     overflow: hidden;
@@ -47,58 +48,69 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: white;
+    border-right: 1px solid #d6d5d5;
+    box-shadow: 4px 0 0 -1px rgba(230,230,230,1);
 }
 
-    .sidebar .top-row {
-        background-color: rgba(0,0,0,0.4);
-    }
+.sidebar .top-row {
+    /*background-color: rgba(0, 0, 0, 0.4);*/
+}
 
-    .sidebar .navbar-brand {
-        font-size: 1.1rem;
-    }
+.sidebar .navbar-brand {
+    font-size: 1.1rem;
+    color: blue;
+}
 
-    .sidebar .oi {
-        width: 2rem;
-        font-size: 1.1rem;
-        vertical-align: text-top;
-        top: -2px;
-    }
+.sidebar .oi {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
+}
 
-    .sidebar .nav-item {
-        font-size: 0.9rem;
-        padding-bottom: 0.5rem;
-    }
+.sidebar .nav-item {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
+}
 
-        .sidebar .nav-item:first-of-type {
-            padding-top: 1rem;
-        }
+.sidebar .nav-item:first-of-type {
+    padding-top: 1rem;
+}
 
-        .sidebar .nav-item:last-of-type {
-            padding-bottom: 1rem;
-        }
+.sidebar .nav-item:last-of-type {
+    padding-bottom: 1rem;
+}
 
-        .sidebar .nav-item a {
-            color: #d7d7d7;
-            border-radius: 4px;
-            height: 3rem;
-            display: flex;
-            align-items: center;
-            line-height: 3rem;
-        }
+.sidebar .nav-item a {
+    color: #777777;
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+}
 
-            .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
-                color: white;
-            }
+.sidebar .nav-item a.active {
+    background: linear-gradient(90deg, rgba(198, 234, 253, 0.4433123591233369) 0%, rgba(255,255,255,1) 100%);
+    color: black;
+    border-left: 5px solid blue;
+}
+.sidebar .nav-item a.active span{
+    color: blue;
+}
 
-            .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
-                color: white;
-            }
+.sidebar .nav-item a:hover {
+    /*background-color: rgba(255, 255, 255, 0.1);*/
+    /*border-left: 5px solid blue;*/
+    background: linear-gradient(90deg, rgba(125,182,213,0.4433123591233369) 0%, rgba(255,255,255,1) 100%);
+    /*color: white;*/
+}
 
 .content {
     padding-top: 1.1rem;
+    background-color: #f6f6fa;
+    height: 100%;
 }
 
 .navbar-toggler {
@@ -163,7 +175,6 @@ app {
     }
 
     .main .top-row {
-        position: sticky;
         top: 0;
     }
 
