set multistep wizard structure

--- a/Client/Client/Pages/Services.razor
+++ b/Client/Client/Pages/Services.razor
@@ -24,7 +24,7 @@
 @code {
     public void OnClick(String ServiceId)
     {
-        NavigationManager.NavigateTo($"/services/{ServiceId}");
+        NavigationManager.NavigateTo($"/BookService?ServiceId={ServiceId}");
     }
 
 }
