--- a/Client/Client/Shared/MainLayout.razor
+++ b/Client/Client/Shared/MainLayout.razor
@@ -16,6 +16,7 @@
             </Authorized>
             <NotAuthorized>
                 <NavLink href="Login">Login</NavLink>
+                <NavLink href="Register">Register</NavLink>
             </NotAuthorized>
         </AuthorizeView>
         <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
