--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -13,16 +13,21 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="ManageSchedule">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Schedule
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="services">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Services
             </NavLink>
         </li>
         <AuthorizeView Policy="BusinessOwner">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="employees">
-                <span class="oi oi-people" aria-hidden="true"></span> Employees
-            </NavLink>
-        </li>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="employees">
+                    <span class="oi oi-people" aria-hidden="true"></span> Employees
+                </NavLink>
+            </li>
         </AuthorizeView>
     </ul>
 </div>
