--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -17,7 +17,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Services
             </NavLink>
         </li>
-        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="AddBusiness">
+                <span class="oi oi-people" aria-hidden="true"></span> Add Business
+            </NavLink>
+        </li>
+
         <AuthorizeView Policy="BusinessOwner">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="employees">
