--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-light">
-    <a class="navbar-brand" href="">A1-DNP1Y</a>
+    <a class="navbar-brand" href="">Booking App SEP3</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,7 +22,12 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Add Business
             </NavLink>
         </li>
-
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="OwnedBusinesses">
+                <span class="oi oi-folder" aria-hidden="true"></span> My Businesses
+            </NavLink>
+        </li>
+        
         <AuthorizeView Policy="BusinessOwner">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="employees">
