--- a/Client/Client/Pages/AddBusiness.razor
+++ b/Client/Client/Pages/AddBusiness.razor
@@ -10,6 +10,7 @@
 @inject IBusinessService BusinessService
 @inject NavigationManager NavigationManager
 @inject AuthenticationStateProvider CustomAuthenticationStateProvider
+@attribute [Authorize(Policy = "BusinessOwner")]
 
 <div class="col-lg-12 control-section">
     <EditForm Model="@_business" OnValidSubmit="@AddNewBusiness" class="content-wrapper">
