--- a/Client/Client/Pages/AddService.razor
+++ b/Client/Client/Pages/AddService.razor
@@ -5,17 +5,36 @@
 @using Client.Data
 @using Microsoft.AspNetCore.WebUtilities
 @inject NavigationManager NavigationManager;
+@attribute [Authorize(Policy = "BusinessOwner")]
 
-<AddServiceForm OnSubmit="@HandleSubmit"/>
+<style>
+    .content-wrapper {
+        width: 90%;
+        margin: 0 auto;
+        min-width: 85px;
+    }
+</style>
+
+<div class="col-lg-12 content-wrapper">
+    <div>
+        <h2 class="font-weight-bold">Add a service to your business</h2>
+        <p>Please enter details below to add the service</p>
+        <hr/>
+    </div>
+    <div class="card">
+        <AddServiceForm OnSubmit="@HandleSubmit"/>
+    </div>
+    
+</div>
 
 @code {
     private String businessId;
-    
+
     protected override async Task OnInitializedAsync()
     {
         var query = new Uri(NavigationManager.Uri).Query;
-        
-        if (QueryHelpers.ParseQuery(query).TryGetValue("businessId",out var value ))
+
+        if (QueryHelpers.ParseQuery(query).TryGetValue("businessId", out var value))
         {
             businessId = Convert.ToString(value);
         }
