--- a/Client/Client/Shared/NavMenu.razor
+++ b/Client/Client/Shared/NavMenu.razor
@@ -17,16 +17,24 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Services
             </NavLink>
         </li>
+        <AuthorizeView Policy="BusinessOwner">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="AddBusiness">
-                <span class="oi oi-people" aria-hidden="true"></span> Add Business
+                <span class="oi oi-plus" aria-hidden="true"></span> Add Business
             </NavLink>
         </li>
-
+        </AuthorizeView>
         <AuthorizeView Policy="BusinessOwner">
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="employees">
-                    <span class="oi oi-people" aria-hidden="true"></span> Employees
+                <NavLink class="nav-link" href="AddEmployee">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Add Employee
+                </NavLink>
+            </li>
+        </AuthorizeView>
+        <AuthorizeView Policy="BusinessOwner">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="AddService">
+                    <span class="oi oi-plus" aria-hidden="true"></span>Add Service
                 </NavLink>
             </li>
         </AuthorizeView>
